tests/trybuild/cannot_call_traced_on_traced_error.rs
use eros::{traced, IntoConcreteTracedError};



fn main() {
    let error: eros::TracedError = traced!("Error");
    let _error = error.traced();
}
